# libbattlenet

./: .clang-format  .gitignore  meson.build  test_all.cpp
include/bnetcpp/: auth.hpp  client.hpp  config.hpp  exception.hpp
src/: auth.cpp  client.cpp  utils.hpp
subprojects/: cppbase64.wrap
